Contenue principal de la page Accueil ajouter Task #8 - Ajouter le contenu principal de la page d'Accueil

--- a/index.html
+++ b/index.html
@@ -129,6 +129,32 @@
                 </div>
             </div>
         </nav>
+
+        <!------------------------------------------------ Contenu principal ------------------------------------------------>
+        
+        <div class="jumbotron">
+            <h1>Bonjour et bienvenue sur mon portfolio ! </h1> 
+            <div class="row">
+                <div class="col-lg-1">
+                    <img src="images/AmeliaPilou.jpg" class="img-thumbnail" alt="Photo de Amélia Pilou souriant tenant un teléphone dans sa main droite en regardant la caméra"> 
+                </div>
+                <div class="col-lg-7">
+                    <p>Je m'appelle Amelia Pilou, j'ai 21 ans et ce site a pour vocation de me présenter en tant que personne, en
+                        tant qu'étudiante et candidate à l'obtention du BTS SIO (Services Informatiques aux Organisations) et en tant
+                        que future professionnelle de finformatique.
+                    </p>
+                    <p><a class="btn btn-primary" href="#" target="_blank"
+                          role="button">En savoir plus »</a>
+                    </p>
+                </div>
+                <div class="col-lg-4">
+
+                </div>
+            </div>
+        </div>   
+
+        <!------------------------------------------------------------ Pied de page  ------------------------------------------------------------------------------------------------->
+
         <footer>
             <div class="container">
                 <div class="row">
