--- a/pages/cv.html
+++ b/pages/cv.html
@@ -7,6 +7,8 @@
         <meta name="description" content="Portfolio de Ruben ALMEIDA ALHADA - BTS SIO">
         <meta name="author" content =" Ruben ALMEIDA ALHADA">
         <link rel="icon" href="favicon.ico">
+        <link href="../css/cv.css" rel="stylesheet">
+
         <!-- Bootstrap CSS -->
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
         <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
@@ -30,7 +32,7 @@
                         <!---------------------------------------------------Bouton Accueil ----------------------------------------------->
 
                         <li class="active nav-item">
-                            <a href="index.html" class="nav-link">
+                            <a href="../index.html" class="nav-link">
                                 <span class="fa fa-home"></span> Accueil
                             </a>
                         </li>
@@ -38,7 +40,7 @@
                         <!-------------------------------------------- Bouton "CV" -------------------------------------------------------------------->
 
                         <li class="nav-item">
-                            <a href="pages/cv.html" class="nav-link">
+                            <a href="cv.html" class="nav-link">
                                 <span class="fa fa-id-badge"></span> CV
                             </a>
                         </li>
@@ -131,27 +133,21 @@
         </nav>
 
         <!------------------------------------------------ Contenu principal ------------------------------------------------>
-        
-        <div class="jumbotron">
-            <h1>Bonjour et bienvenue sur mon portfolio ! </h1> 
-            <div class="row">
-                <div class="col-lg-1">
-                    <img src="images/AmeliaPilou.jpg" class="img-thumbnail" alt="Photo de Amélia Pilou souriant tenant un teléphone dans sa main droite en regardant la caméra"> 
-                </div>
-                <div class="col-lg-7">
-                    <p>Je m'appelle Ruben ALMEIDA ALHADA, j'ai 19 ans et ce site a pour vocation de me présenter en tant que personne, en
-                        tant qu'étudiante et candidate à l'obtention du BTS SIO (Services Informatiques aux Organisations) et en tant
-                        que future professionnelle de finformatique.
-                    </p>
-                    <p><a class="btn btn-primary" href="#" target="_blank"
-                          role="button">En savoir plus »</a>
-                    </p>
-                </div>
-                <div class="col-lg-4">
 
+        <div class="jumbotron">
+            <div class="container">
+                <div class="row cadreCV">
+                    <div id="cv-entete" class="text-center">
+                        <div id="cv-photo">
+                            <img src="../images/AmeliaPilou.jpg" alt="Ma photo d'identité">
+                        </div>
+                        <div id="cv-intro">
+                            <h1>Bonjour, je m'appelle <span>Ruben</span> et voici mon CV</h1>
+                        </div>
+                    </div>
                 </div>
             </div>
-        </div>   
+        </div>
 
         <!------------------------------------------------------------ Pied de page  ------------------------------------------------------------------------------------------------->
 
