--- a/pages/cv.html
+++ b/pages/cv.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <meta name="description" content="Portfolio de Ruben ALMEIDA ALHADA - BTS SIO">
         <meta name="author" content =" Ruben ALMEIDA ALHADA">
-        <link rel="icon" href="favicon.ico">
+        <link rel="icon" href="../favicon.ico">
         <link href="../css/cv.css" rel="stylesheet">
 
         <!-- Bootstrap CSS -->
@@ -56,7 +56,7 @@
                                 <li role="presentation" class="dropdown-header dropdown-item">
                                     En autonomie</li>
                                 <li role="presentation" class="dropdown-item">
-                                    <a role="menuitem" href="#">Application Android</a>
+                                    <a role="menuitem" href="appliandroid.html">Application Android</a>
                                 </li>
                                 <li role="presentation" class="dropdown-item">
                                     <a role="menuitem" href="#">Site web</a>
