--- a/pages/cv.html
+++ b/pages/cv.html
@@ -304,9 +304,26 @@
                                        title="Lien vers le profil Instagram d'Amélia Pilou">
                                         <img class="contact-icon" src="../images/cv/instagram-dreamstale43.png"
                                              alt="Icone de Instagram"> Instagram
-
                                     </a>
                                 </div>
+                            </div>
+                        </div>
+
+                        <!------------------------Rubrique "Compétences"------------------->
+
+                        <div id="competences" class="rubrique clearfix">
+                            <h2><span class="fa fa-wrench"></span> Compétences</h2>
+                            <div class="container">
+                                <div class="libelle">Intégration web</div>
+                                <div class="classement classement5"></div>
+                            </div>
+                            <div class="container">
+                                <div class="libelle">Dév. web</div>
+                                <div class="classement classement4"></div>
+                            </div>
+                            <div class="container">
+                                <div class="libelle">Administration</div>
+                                <div class="classement classement3"></div>
                             </div>
                         </div>
                     </div>
