--- a/pages/cv.html
+++ b/pages/cv.html
@@ -12,6 +12,7 @@
         <!-- Bootstrap CSS -->
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
         <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
         <!-- JavaScript-->
         <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
@@ -378,68 +379,83 @@
                                 <div class="classement classement3"></div>
                             </div>
                         </div>
+
+                        <!------------------------Rubrique "Passions"------------------->
+
+                        <div id="passions" class="rubrique clearfix">
+                            <h2><span class="fa fa-heart"></span> Passions</h2>
+                            <div class="container">
+                                <div class="details float-left">
+                                    <div><i class="bi bi-joystick"></i>Jeux-Vidéos</div>
+                                    <div><i class="bi bi-music-note-beamed"></i>Musique (guitare electrique, piano)</div>
+                                    <div><i class="bi bi-activity"></i>Sport (Basketball, Aïkido, Musculation)</div>
+                                    <div><i class="bi bi-image"></i>Montage Photo</div>
+                                    <div><i class="bi bi-box-fill"></i>Modelisation 3D</div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
 
-    <!------------------------------------------------------------ Pied de page  ------------------------------------------------------------------------------------------------->
 
-    <footer>
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-4">
-                    <h2>Étudiante du CNED</h2>
-                    <p>J'ai choisi de suivre le BTS SIO à distance par le Centre National
-                        d'Enseignement à Distance car je souhaitais pourvoir avancer à mon rythme,
-                        choisir moi-même mon emploi du temps, apprendre à être autonome, pouvoir
-                        utiliser les outils de collaboration à distance et devenir plus responsable en
-                        étant capable de me fixer moi-même des contraintes, des limites et des
-                        objectifs à atteindre !
-                    </p>
-                    <p><a class="btn btn-secondary" href="http://www.cned.fr" target="_blank"
-                          role="button">En savoir plus »</a>
-                    </p>
+        <!------------------------------------------------------------ Pied de page  ------------------------------------------------------------------------------------------------->
+
+        <footer>
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-4">
+                        <h2>Étudiante du CNED</h2>
+                        <p>J'ai choisi de suivre le BTS SIO à distance par le Centre National
+                            d'Enseignement à Distance car je souhaitais pourvoir avancer à mon rythme,
+                            choisir moi-même mon emploi du temps, apprendre à être autonome, pouvoir
+                            utiliser les outils de collaboration à distance et devenir plus responsable en
+                            étant capable de me fixer moi-même des contraintes, des limites et des
+                            objectifs à atteindre !
+                        </p>
+                        <p><a class="btn btn-secondary" href="http://www.cned.fr" target="_blank"
+                              role="button">En savoir plus »</a>
+                        </p>
+                    </div>
+                    <div class="col-lg-4">
+                        <h2>Le BTS SIO</h2>
+                        <p>Passionnée d'informatique depuis mon plus jeune âge, j'aime apprendre à faire
+                            de nouvelles choses avec mon ordinateur, mon smartphone ou ma tablette. Une
+                            Geek ? Oui assurément ! Mais j'aimerais maintenant passer au niveau au-dessus
+                            et devenir une vraie Nerd, dans le bon sens du terme ! Après mon bac, le BTS
+                            SIO s'est présenté comme une évidence. Avec 60% d'Informatique "pure", 13%
+                            d'Économie, management et droit de l'informatique, 9% d'Anglais, 9% de culture
+                            générale et 9% de Maths, je savais que cette formation allait me mettre le
+                            pied à l'étrier pour poursuivre ensuite dans cette voie et devenir
+                            informaticienne !
+                        </p>
+                        <p><a class="btn btn-secondary" href="https://fr.wikipedia.org/wiki/Brevet_de_technicien_supérieur_-_Services_informatiques_aux_organisations" target="_blank" 
+                              role="button">En savoir plus »</a>
+                        </p>
+                    </div>
+                    <div class="col-lg-4">
+                        <h2>Option B SLAM</h2>
+                        <p>En fin de premier semestre, on doit choisir notre option. "Solutions
+                            Logicielles et Applications Métiers" est l'option qui m'a séduit&nbsp;!
+                            Travailler en équipe à la satisfaction de besoins d'un client, définir des
+                            spécifications, faire des tests, corriger des bugs, faire de la maintenance,
+                            veiller à la sécurité des données à caractère personnel... tout en apprenant
+                            les bases du métier de développeuse : modélisation des données
+                            avec Merise et UML, programmation objet avec Java, C# et PHP, conception
+                            de bases de données sous PostgreSQL et MySQL, réalisation de
+                            composants logiciels avec Symfony, gestion de projet, méthodes agiles...
+                            J'étais sûre que ça serait fait pour moi !
+                        </p>
+                        <p><a class="btn btn-secondary" href="https://www.onisep.fr/Ressources/Univers-Formation/Formations/Post-bac/bts-services-informatiques-aux-organisations-option-b-solutions-logicielles-et-applications-metiers" target="_blank" 
+                              role="button">En savoir plus »</a>
+                        </p>
+                    </div>
                 </div>
-                <div class="col-lg-4">
-                    <h2>Le BTS SIO</h2>
-                    <p>Passionnée d'informatique depuis mon plus jeune âge, j'aime apprendre à faire
-                        de nouvelles choses avec mon ordinateur, mon smartphone ou ma tablette. Une
-                        Geek ? Oui assurément ! Mais j'aimerais maintenant passer au niveau au-dessus
-                        et devenir une vraie Nerd, dans le bon sens du terme ! Après mon bac, le BTS
-                        SIO s'est présenté comme une évidence. Avec 60% d'Informatique "pure", 13%
-                        d'Économie, management et droit de l'informatique, 9% d'Anglais, 9% de culture
-                        générale et 9% de Maths, je savais que cette formation allait me mettre le
-                        pied à l'étrier pour poursuivre ensuite dans cette voie et devenir
-                        informaticienne !
-                    </p>
-                    <p><a class="btn btn-secondary" href="https://fr.wikipedia.org/wiki/Brevet_de_technicien_supérieur_-_Services_informatiques_aux_organisations" target="_blank" 
-                          role="button">En savoir plus »</a>
-                    </p>
-                </div>
-                <div class="col-lg-4">
-                    <h2>Option B SLAM</h2>
-                    <p>En fin de premier semestre, on doit choisir notre option. "Solutions
-                        Logicielles et Applications Métiers" est l'option qui m'a séduit&nbsp;!
-                        Travailler en équipe à la satisfaction de besoins d'un client, définir des
-                        spécifications, faire des tests, corriger des bugs, faire de la maintenance,
-                        veiller à la sécurité des données à caractère personnel... tout en apprenant
-                        les bases du métier de développeuse : modélisation des données
-                        avec Merise et UML, programmation objet avec Java, C# et PHP, conception
-                        de bases de données sous PostgreSQL et MySQL, réalisation de
-                        composants logiciels avec Symfony, gestion de projet, méthodes agiles...
-                        J'étais sûre que ça serait fait pour moi !
-                    </p>
-                    <p><a class="btn btn-secondary" href="https://www.onisep.fr/Ressources/Univers-Formation/Formations/Post-bac/bts-services-informatiques-aux-organisations-option-b-solutions-logicielles-et-applications-metiers" target="_blank" 
-                          role="button">En savoir plus »</a>
-                    </p>
-                </div>
+
+                <hr>
+                <p class="text-center" id="copyright">© Ruben ALMEIDA ALHADA 2023</p>
             </div>
-
-            <hr>
-            <p class="text-center" id="copyright">© Ruben ALMEIDA ALHADA 2023</p>
-        </div>
-    </footer>
-</body>
+        </footer>
+    </body>
 </html>
