Rubrique "En quelques mots..." adapté

--- a/pages/cv.html
+++ b/pages/cv.html
@@ -154,11 +154,9 @@
 
                         <div class="rubrique clearfix">
                             <h2><span class="fa fa-comment"></span> En quelques mots...</h2>
-                            <p>J'ai 21 ans, j'habite Toulon et je suis passionnée d'informatique et de
-                                nouvelles technologies depuis mon plus jeune âge. Je suis actuellement un
-                                BTS Services Informatiques aux Organisations ce qui m'a décidé à aller au
-                                delà de la passion, afin de faire de l'informatique et plus particulièrement
-                                du développement d'applications, mon métier&nbsp;!
+                            <p>J'ai 19 ans, j'habite actuellement à La Seyne-sur-Mer pour suivre un BTS Services Informatiques aux Organisations se trouvant à Toulon. 
+                                Je suis passionné par l'informatique depuis que je suis tout petit, inspiré par mon oncle qui est dans ce domaine depuis des dizaines d'années maintenant, 
+                                et je compte bien continuer sur cette voie en me spécialisant dans le développement d'applications&nbsp;!
                             </p>
                         </div>
 
