--- a/pages/cv.html
+++ b/pages/cv.html
@@ -160,7 +160,7 @@
                             </p>
                         </div>
 
-                        <!--Rubrique "Parcour Scolaire"-->
+                        <!--Rubrique "Parcours Scolaire"-->
 
                         <div class="rubrique clearfix">
                             <h2><span class="fa fa-graduation-cap"></span> Parcours scolaire</h2>
@@ -174,6 +174,16 @@
                                         <p>Brevet de Technicien Supérieur "Services Informatiques aux
                                             Organisations", option "Solutions Logicielles et Applications
                                             Métiers"</p>
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="date float-left">
+                                        <span class="fa fa-stop-circle"></span>&nbsp;2022
+                                    </div>
+                                    <div class="details float-right">
+                                        <h3>Certificat "Gold" Introduction a la creation de Jeux Videos (Online 25 ECTS)</h3>
+                                        <p>Certificat obtenue lors d'une formation en ligne de 1an proposé par "XAMK South-Eastern Finland University of Applied Sciences" et par 
+                                        "Cambridge Academy of Digital Games and Innovation" dans le domaine du développement de Jeux-Videos</p>
                                     </div>
                                 </li>
                                 <li>
