Rubrique "Professionnel" temporairement commenté

--- a/pages/cv.html
+++ b/pages/cv.html
@@ -183,7 +183,7 @@
                                     <div class="details float-right">
                                         <h3>Certificat "Gold" Introduction a la creation de Jeux Videos (Online 25 ECTS)</h3>
                                         <p>Certificat obtenue lors d'une formation en ligne de 1an proposé par "XAMK South-Eastern Finland University of Applied Sciences" et par 
-                                        "Cambridge Academy of Digital Games and Innovation" dans le domaine du développement de Jeux-Videos</p>
+                                            "Cambridge Academy of Digital Games and Innovation" dans le domaine du développement de Jeux-Videos</p>
                                     </div>
                                 </li>
                                 <li>
@@ -209,7 +209,7 @@
 
                             <!--Rubrique "Exprériences professionnelles"-->
 
-                            <div class="rubrique clearfix">
+<!--                            <div class="rubrique clearfix">
                                 <h2><span class="fa fa-briefcase"></span> Expériences professionnelles</h2>
                                 <div class="experience clearfix">
                                     <div class="col-3">
@@ -250,16 +250,16 @@
                                         </div>
                                     </div>
                                 </div>
-                            </div>
+                            </div>-->
                         </div>
                     </div>
 
+
+
+                    <!-------------------------------Partie droite-------------------------------------->
+
+                    <!------------------------Rubrique "Me contacter"------------------->
                     <div class="col-xs-12 col-sm-5">
-
-                        <!-------------------------------Partie droite-------------------------------------->
-
-                        <!------------------------Rubrique "Me contacter"------------------->
-
                         <div class="rubrique clearfix">
                             <h2><span class="fa fa-user"></span> Me contacter</h2>
                             <div class="meContacter">
