Rubrique "Me Contacter" Adapté

--- a/pages/cv.html
+++ b/pages/cv.html
@@ -209,48 +209,48 @@
 
                             <!--Rubrique "Exprériences professionnelles"-->
 
-<!--                            <div class="rubrique clearfix">
-                                <h2><span class="fa fa-briefcase"></span> Expériences professionnelles</h2>
-                                <div class="experience clearfix">
-                                    <div class="col-3">
-                                        <div class="lieu">Dev'in Love</div>
-                                        <div class="date">2022 (7 sem.)</div>
-                                    </div>
-                                    <div class="col-9">
-                                        <div class="profession">Developpement PHP Symfony 5</div>
-                                        <div class="details">Création/mise en œuvre de bundles, création de services,
-                                            création de commandes, respect de l'architecture MVC, création de templates
-                                            avec Twig, gestion de la persistance avec Doctrine.
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="experience clearfix">
-                                    <div class="col-3">
-                                        <div class="lieu">SCA Info</div>
-                                        <div class="date">2021 (6 sem.)</div>
-                                    </div>
-                                    <div class="col-9">
-                                        <div class="profession">Développement JEE</div>
-                                        <div class="details">Création/mise en oeuvre d'EJB (Entreprise Java Beans),
-                                            persistance des données avec JPA, mise en oeuvre du framework MVC JSF
-                                            (JavaServer Faces), création de composants graphique avec RichFaces.
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="experience clearfix">
-                                    <div class="col-3">
-                                        <div class="lieu">SCA Info</div>
-                                        <div class="date">2020<br>(à distance)</div>
-                                    </div>
-                                    <div class="col-9">
-                                        <div class="profession">Intégration avec Boostrap</div>
-                                        <div class="details">Création d'un site vitrine pour présenter l'entreprise et
-                                            ses différents projets. Problématique de RWD (Responsive Web Design),
-                                            optimisation des contenus, tests multisupports.
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>-->
+                            <!--                            <div class="rubrique clearfix">
+                                                            <h2><span class="fa fa-briefcase"></span> Expériences professionnelles</h2>
+                                                            <div class="experience clearfix">
+                                                                <div class="col-3">
+                                                                    <div class="lieu">Dev'in Love</div>
+                                                                    <div class="date">2022 (7 sem.)</div>
+                                                                </div>
+                                                                <div class="col-9">
+                                                                    <div class="profession">Developpement PHP Symfony 5</div>
+                                                                    <div class="details">Création/mise en œuvre de bundles, création de services,
+                                                                        création de commandes, respect de l'architecture MVC, création de templates
+                                                                        avec Twig, gestion de la persistance avec Doctrine.
+                                                                    </div>
+                                                                </div>
+                                                            </div>
+                                                            <div class="experience clearfix">
+                                                                <div class="col-3">
+                                                                    <div class="lieu">SCA Info</div>
+                                                                    <div class="date">2021 (6 sem.)</div>
+                                                                </div>
+                                                                <div class="col-9">
+                                                                    <div class="profession">Développement JEE</div>
+                                                                    <div class="details">Création/mise en oeuvre d'EJB (Entreprise Java Beans),
+                                                                        persistance des données avec JPA, mise en oeuvre du framework MVC JSF
+                                                                        (JavaServer Faces), création de composants graphique avec RichFaces.
+                                                                    </div>
+                                                                </div>
+                                                            </div>
+                                                            <div class="experience clearfix">
+                                                                <div class="col-3">
+                                                                    <div class="lieu">SCA Info</div>
+                                                                    <div class="date">2020<br>(à distance)</div>
+                                                                </div>
+                                                                <div class="col-9">
+                                                                    <div class="profession">Intégration avec Boostrap</div>
+                                                                    <div class="details">Création d'un site vitrine pour présenter l'entreprise et
+                                                                        ses différents projets. Problématique de RWD (Responsive Web Design),
+                                                                        optimisation des contenus, tests multisupports.
+                                                                    </div>
+                                                                </div>
+                                                            </div>
+                                                        </div>-->
                         </div>
                     </div>
 
@@ -264,8 +264,8 @@
                             <h2><span class="fa fa-user"></span> Me contacter</h2>
                             <div class="meContacter">
                                 <div class="details float-left">
-                                    <a href="mailto:amelia.pilou@gmail.com?subject=Contact depuis le CV en ligne"
-                                       title="Mail de Amélia Pilou">
+                                    <a href="mailto:ruben.almeidaalhada@gmail.com?subject=Contact depuis le CV en ligne"
+                                       title="Mail de Ruben ALMEIDA ALHADA">
                                         <img class="contact-icon" src="../images/cv/mail-dreamstale47.png"
                                              alt="Icone de mail"> GMail.com
                                     </a>
@@ -273,46 +273,10 @@
                             </div>
                             <div class="meContacter">
                                 <div class="details float-left">
-                                    <a href="https://twitter.com/AmeliaPILOU"
-                                       title="Lien vers la page Twitter de @AmeliaPilou">
-                                        <img class="contact-icon" src="../images/cv/twitter-dreamstale71.png"
-                                             alt="Icone de Twitter"> Twitter
-                                    </a>
-                                </div>
-                            </div>
-                            <div class="meContacter">
-                                <div class="details float-left">
-                                    <a href="http://fr.linkedin.com/in/ameliaPilou"
-                                       title="Lien vers le profil LinkedIn de Amélia Pilou">
-                                        <img class="contact-icon" src="../images/cv/linkedin-dreamstale45.png"
-                                             alt="Icone de LinkedIn"> LinkedIn
-                                    </a>
-                                </div>
-                            </div>
-                            <div class="meContacter">
-                                <div class="details float-left">
-                                    <a href="https://github.com/AmeliaPilou/"
-                                       title="Lien vers le profil GitHub d'Amélia Pilou">
+                                    <a href="https://github.com/Ralh19/"
+                                       title="Lien vers le profil GitHub d'">
                                         <img class="contact-icon" src="../images/cv/github2-dreamstale35.png"
                                              alt="Icone de GitHub"> GitHub
-                                    </a>
-                                </div>
-                            </div>
-                            <div class="meContacter">
-                                <div class="details float-left">
-                                    <a href="skype:ameliapilou?userinfo"
-                                       title="Lien vers le profil Skype d'Amélia Pilou">
-                                        <img class="contact-icon" src="../images/cv/skype-dreamstale61.png"
-                                             alt="Icone de Skype"> Skype
-                                    </a>
-                                </div>
-                            </div>
-                            <div class="meContacter">
-                                <div class="details float-left">
-                                    <a href="https://instagram.com/AmeliaPilou"
-                                       title="Lien vers le profil Instagram d'Amélia Pilou">
-                                        <img class="contact-icon" src="../images/cv/instagram-dreamstale43.png"
-                                             alt="Icone de Instagram"> Instagram
                                     </a>
                                 </div>
                             </div>
