Adaptation de la page index + rajout de la photo dans index et cv

--- a/pages/cv.html
+++ b/pages/cv.html
@@ -140,7 +140,7 @@
                 <div class="row cadreCV">
                     <div id="cv-entete" class="text-center">
                         <div id="cv-photo">
-                            <img src="../images/AmeliaPilou.jpg" alt="Ma photo d'identité">
+                            <img src="../images/ruben.jpg" alt="Ma photo d'identité">
                         </div>
                         <div id="cv-intro">
                             <h1>Bonjour, je m'appelle <span>Ruben</span> et voici mon CV</h1>
@@ -378,13 +378,13 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-4">
-                        <h2>Étudiante du CNED</h2>
-                        <p>J'ai choisi de suivre le BTS SIO à distance par le Centre National
-                            d'Enseignement à Distance car je souhaitais pourvoir avancer à mon rythme,
-                            choisir moi-même mon emploi du temps, apprendre à être autonome, pouvoir
-                            utiliser les outils de collaboration à distance et devenir plus responsable en
-                            étant capable de me fixer moi-même des contraintes, des limites et des
-                            objectifs à atteindre !
+                        <h2>Étudiant au Lycée Bonaparte - Toulon</h2>
+                        <p>J'ai choisi de suivre le BTS SIO au Lycée Bonaparte, situé dans la ville de Toulon, 
+                            dans le but d'élargir mes connaissances dans le domaine de l'informatique, 
+                            notamment dans le développement, qui est le sujet qui m'intéresse le plus.
+                            Cette formation va aussi contribuer a me professionnaliser au maximum 
+                            afin d'être le plus compétent possible lors de mon ascension dans le monde du travail.
+
                         </p>
                         <p><a class="btn btn-secondary" href="http://www.cned.fr" target="_blank"
                               role="button">En savoir plus »</a>
@@ -392,15 +392,14 @@
                     </div>
                     <div class="col-lg-4">
                         <h2>Le BTS SIO</h2>
-                        <p>Passionnée d'informatique depuis mon plus jeune âge, j'aime apprendre à faire
-                            de nouvelles choses avec mon ordinateur, mon smartphone ou ma tablette. Une
-                            Geek ? Oui assurément ! Mais j'aimerais maintenant passer au niveau au-dessus
-                            et devenir une vraie Nerd, dans le bon sens du terme ! Après mon bac, le BTS
-                            SIO s'est présenté comme une évidence. Avec 60% d'Informatique "pure", 13%
-                            d'Économie, management et droit de l'informatique, 9% d'Anglais, 9% de culture
-                            générale et 9% de Maths, je savais que cette formation allait me mettre le
-                            pied à l'étrier pour poursuivre ensuite dans cette voie et devenir
-                            informaticienne !
+                        <p> L'informatique est un domaine qui m'intéresse grandement depuis mon plus jeune âge, 
+                           inspiré par mon oncle, ingénieur dans ce domaine. J'ai toujours considéré ce milieu comme un hobby 
+                           à part entière sans jamais vraiment vouloir en faire mon métier. Ce n'est que très récemment, lors d'une réorientation 
+                           après l'obtention de mon BAC STMG spécialité Mercatique, que j'ai décidé d'en faire bien plus que mon hobby et de commencer 
+                           à me former sérieusement dans le but d'en faire ma profession. J'ai choisi le BTS "Service Informatique Aux Organisations" en 
+                           grande partie pour son accessibilité, mais aussi pour le côté professionnalisant qui s'éloigne des cours traditionnels dont je 
+                           commençais sérieusement à me lasser. Je suis déterminé à réussir cette formation pour ainsi atteindre mon objectif de devenir un informaticien
+                           aguerri !
                         </p>
                         <p><a class="btn btn-secondary" href="https://fr.wikipedia.org/wiki/Brevet_de_technicien_supérieur_-_Services_informatiques_aux_organisations" target="_blank" 
                               role="button">En savoir plus »</a>
@@ -408,16 +407,12 @@
                     </div>
                     <div class="col-lg-4">
                         <h2>Option B SLAM</h2>
-                        <p>En fin de premier semestre, on doit choisir notre option. "Solutions
+                        <p>En fin de premier semestre, on doit choisir notre option. "Solutions 
                             Logicielles et Applications Métiers" est l'option qui m'a séduit&nbsp;!
-                            Travailler en équipe à la satisfaction de besoins d'un client, définir des
-                            spécifications, faire des tests, corriger des bugs, faire de la maintenance,
-                            veiller à la sécurité des données à caractère personnel... tout en apprenant
-                            les bases du métier de développeuse : modélisation des données
-                            avec Merise et UML, programmation objet avec Java, C# et PHP, conception
-                            de bases de données sous PostgreSQL et MySQL, réalisation de
-                            composants logiciels avec Symfony, gestion de projet, méthodes agiles...
-                            J'étais sûre que ça serait fait pour moi !
+                            L'une de mes principales motivations à choisir cette option était par rapport 
+                            à mon fort intérêt pour la programmation, dont j'ai fait l'expérience durant 1an de 
+                            formation à distance sur le développement de jeux vidéo, ce qui m'a fait adorer ce domaine. 
+                            Mon choix n'a donc pas été très difficile.
                         </p>
                         <p><a class="btn btn-secondary" href="https://www.onisep.fr/Ressources/Univers-Formation/Formations/Post-bac/bts-services-informatiques-aux-organisations-option-b-solutions-logicielles-et-applications-metiers" target="_blank" 
                               role="button">En savoir plus »</a>
