Rubrique Expériences Professionnels remise

--- a/pages/cv.html
+++ b/pages/cv.html
@@ -207,50 +207,16 @@
                                 </li>
                             </ul>
 
-                            <!--Rubrique "Exprériences professionnelles"-->
+                            <!-----------Rubrique "Exprériences professionnelles"----------->
 
-                            <!--                            <div class="rubrique clearfix">
-                                                            <h2><span class="fa fa-briefcase"></span> Expériences professionnelles</h2>
-                                                            <div class="experience clearfix">
-                                                                <div class="col-3">
-                                                                    <div class="lieu">Dev'in Love</div>
-                                                                    <div class="date">2022 (7 sem.)</div>
-                                                                </div>
-                                                                <div class="col-9">
-                                                                    <div class="profession">Developpement PHP Symfony 5</div>
-                                                                    <div class="details">Création/mise en œuvre de bundles, création de services,
-                                                                        création de commandes, respect de l'architecture MVC, création de templates
-                                                                        avec Twig, gestion de la persistance avec Doctrine.
-                                                                    </div>
-                                                                </div>
-                                                            </div>
-                                                            <div class="experience clearfix">
-                                                                <div class="col-3">
-                                                                    <div class="lieu">SCA Info</div>
-                                                                    <div class="date">2021 (6 sem.)</div>
-                                                                </div>
-                                                                <div class="col-9">
-                                                                    <div class="profession">Développement JEE</div>
-                                                                    <div class="details">Création/mise en oeuvre d'EJB (Entreprise Java Beans),
-                                                                        persistance des données avec JPA, mise en oeuvre du framework MVC JSF
-                                                                        (JavaServer Faces), création de composants graphique avec RichFaces.
-                                                                    </div>
-                                                                </div>
-                                                            </div>
-                                                            <div class="experience clearfix">
-                                                                <div class="col-3">
-                                                                    <div class="lieu">SCA Info</div>
-                                                                    <div class="date">2020<br>(à distance)</div>
-                                                                </div>
-                                                                <div class="col-9">
-                                                                    <div class="profession">Intégration avec Boostrap</div>
-                                                                    <div class="details">Création d'un site vitrine pour présenter l'entreprise et
-                                                                        ses différents projets. Problématique de RWD (Responsive Web Design),
-                                                                        optimisation des contenus, tests multisupports.
-                                                                    </div>
-                                                                </div>
-                                                            </div>
-                                                        </div>-->
+                            <div class="rubrique clearfix">
+                                <h2><span class="fa fa-briefcase"></span> Expériences professionnelles</h2>
+                                <div class="experience clearfix">
+                                    <div class="col-3">
+                                        <div class="none">Coming Soon...</div>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
 
@@ -393,13 +359,13 @@
                     <div class="col-lg-4">
                         <h2>Le BTS SIO</h2>
                         <p> L'informatique est un domaine qui m'intéresse grandement depuis mon plus jeune âge, 
-                           inspiré par mon oncle, ingénieur dans ce domaine. J'ai toujours considéré ce milieu comme un hobby 
-                           à part entière sans jamais vraiment vouloir en faire mon métier. Ce n'est que très récemment, lors d'une réorientation 
-                           après l'obtention de mon BAC STMG spécialité Mercatique, que j'ai décidé d'en faire bien plus que mon hobby et de commencer 
-                           à me former sérieusement dans le but d'en faire ma profession. J'ai choisi le BTS "Service Informatique Aux Organisations" en 
-                           grande partie pour son accessibilité, mais aussi pour le côté professionnalisant qui s'éloigne des cours traditionnels dont je 
-                           commençais sérieusement à me lasser. Je suis déterminé à réussir cette formation pour ainsi atteindre mon objectif de devenir un informaticien
-                           aguerri !
+                            inspiré par mon oncle, ingénieur dans ce domaine. J'ai toujours considéré ce milieu comme un hobby 
+                            à part entière sans jamais vraiment vouloir en faire mon métier. Ce n'est que très récemment, lors d'une réorientation 
+                            après l'obtention de mon BAC STMG spécialité Mercatique, que j'ai décidé d'en faire bien plus que mon hobby et de commencer 
+                            à me former sérieusement dans le but d'en faire ma profession. J'ai choisi le BTS "Service Informatique Aux Organisations" en 
+                            grande partie pour son accessibilité, mais aussi pour le côté professionnalisant qui s'éloigne des cours traditionnels dont je 
+                            commençais sérieusement à me lasser. Je suis déterminé à réussir cette formation pour ainsi atteindre mon objectif de devenir un informaticien
+                            aguerri !
                         </p>
                         <p><a class="btn btn-secondary" href="https://fr.wikipedia.org/wiki/Brevet_de_technicien_supérieur_-_Services_informatiques_aux_organisations" target="_blank" 
                               role="button">En savoir plus »</a>
